2006-09-06  Phil Muldoon  <pmuldoon@redhat.com>

	* observers/TaskSyscallObserver.java (exitBottomHalf): Add richer syscall
	information to log call.
	(enterBottomHalf): Ditto.
	* observers/SysCallUtilyInfo.java: New.
	

2006-08-31  Mike Cvet  <mcvet@redhat.com>

	* SessionProcTreeView.java (threadViewInit): Set the column header
	of the thread dialog to TID from PID.

2006-08-26  Phil Muldoon  <pmuldoon@redhat.com>

	* SessionProcDataModel.java (addTask): set parent GuiProc.
	* GuiTask.java (setParent): New.
	(getParent): New.	
	* ObserversMenu.java (addGuiObject): Remove post
	observer check.
	(setCurrentProc): Disable observers in menu 
	the the Proc already has.
	(setCurrentTask): Disable observers in menu 
	the the Task *and* the Proc already has.
	
2006-08-25  Stepan Kasal  <kasal@ucw.cz>

	* ConsoleWidget.java: Fix EOLs: CRLF -> LF.

2006-08-24  Ivan Pantuyev  <ipantuye@redhat.com>

	* ConsoleWidget.java: New file.

2006-08-24  Phil Muldoon  <pmuldoon@redhat.com>

	* ObserversMenu.java (addGuiObject): Check if observer has 
	been added already.	Do not allow "same" multiple observers to one 
	task/proc

2006-08-24  Mike Cvet  <mcvet@redhat.com>

	* actions/AddTaskObserverAction.java (execute): Added a null
	check for the observer. Fixes #3125.

2006-08-24  Phil Muldoon  <pmuldoon@redhat.com>

	* ObserversMenu.java: Removed debug output.

2006-08-24  Mike Cvet  <mcvet@redhat.com>

	* actions/ShowMemWin.java (execute): Calls setMonitor() in
	MemoryWindowFactory to let it know its being called from
	the Monitor.
	* actions/ShowRegWin.java (execute): Ditto.

2006-08-23    <swagiaal@redhat.com>

	* SessionProcDataModel.java: Changed removeProc to take GuiProc
	instead of Proc.
	* ObserversMenu.java: Added showAll statments to adding/removing
	observers.

2006-08-23  Phil Muldoon  <pmuldoon@redhat.com>

	* ProcWiseDataModel.java(ProcDestroyedObserver.update):
	Changed process verb in treeview. Changed process accountancy.
	(ProcCreatedObserver.update): Ditto.
 